# flutter-jeefo-pitch-detector

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/c/: CMakeLists.txt  jni_wrapper.c
android/src/main/java/jeefo/pitch_detector/jeefo_pitch_detector/: JeefoPitchDetectorPlugin.java
android/src/main/kotlin/jeefo/pitch_detector/jeefo_pitch_detector/: JeefoPitchDetectorPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/jeefo/pitch_detector/jeefo_pitch_detector_example/: MainActivity.java
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: jeefo_pitch_detector.podspec
ios/Classes/: JeefoPitchDetector.h  JeefoPitchDetector.m  JeefoPitchDetectorPlugin.h  JeefoPitchDetectorPlugin.m
ios/Classes/FFTPitchAnalyser/: base.c  fft.c  jeefo_pitch_detector.c  ptrack.c  yin.c
ios/Classes/FFTPitchAnalyser/include/: FFTPitchAnalyser.h  jeefo_pitch_detector.h  yin.h
lib/: jeefo_pitch_detector.dart  jeefo_pitch_detector_method_channel.dart  jeefo_pitch_detector_platform_interface.dart
test/: jeefo_pitch_detector_method_channel_test.dart  jeefo_pitch_detector_test.dart
(+1 files in other folders)
